fix toggle overlap

--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ body {
   height: 4px;
   background: #555;
   border-radius: 2px;
-  margin: 10px 0 20px;
+  margin: 30px 0 20px;
 }
 #speed-slider::-webkit-slider-runnable-track,
 #volume-slider::-webkit-slider-runnable-track {
